# FEMWave

./: CMakeLists.txt  LICENSE  README.md
cmake/: GetGTest.cmake  GetJSON.cmake  GetPardiso_local.cmake
include/: includes.hpp
include/core/: base_observer.hpp  config.hpp  error.hpp  pardiso.hpp  utilities.hpp
include/mymfem/: geometry.hpp  local_mesh_refinement.hpp  mybfinteg.hpp  mybilinearform.hpp  mymixedbf.hpp  utilities.hpp
include/waveO1/: assembly.hpp  coefficients.hpp  discretisation.hpp  observer.hpp  solver.hpp  sparse_grids_handler.hpp  test_cases.hpp  test_cases_factory.hpp  utilities.hpp
include/waveO2/: assembly.hpp  coefficients.hpp  discretisation.hpp  observer.hpp  test_cases.hpp  test_cases_factory.hpp  utilities.hpp
input/gammaShaped_bisecRefine/: mesh_lx1  mesh_lx6
input/unitSquare_quasiUniform/: mesh_lx1  mesh_lx6
meshes/unitSquare/: quad_mesh_l0.mesh  tri_mesh_l0.mesh
meshes/unitSquare/qu/: mesh_l0.mesh  mesh_l1.mesh  mesh_l2.mesh  mesh_l3.mesh  mesh_l4.mesh  mesh_l5.mesh  mesh_l6.mesh  mesh_l7.mesh
meshes/unitSquare/qu_gmsh/: mesh_l1.msh  mesh_l2.msh  mesh_l3.msh  mesh_l4.msh  mesh_l5.msh
scripts/lShaped_interpolant/: common.py  plot_convg.py
scripts/lShaped_test1/: convergence.py  plot_convg.py
scripts/lShaped_test2/: plot_convg.py
scripts/squareFourPiecewise_transmission_test2/: plot_energy.py  vis_transmission_test2_br_pressure_lx5.glvs  vis_transmission_test2_qu_pressure_lx5.glvs
scripts/squareTwoPiecewise_transmission_test2/: common.py  plot_energy.py  run_vis.sh  vis_transmission_test2_br_pressure_lx5.glvs  vis_transmission_test2_qu_pressure_lx5.glvs
scripts/transmission_test1/: common.py  plot_signal.py  run_vis.sh  vis_transmission_test1_pressure_lx3.glvs  vis_transmission_test1_pressure_lx4.glvs  vis_transmission_test1_pressure_lx5.glvs
scripts/unitSquare_test1/: common.py  convergence.py  plot_convg.py
scripts/unitSquare_test4/: plot_convg.py
src/: CMakeLists.txt  waveO1.cpp
src/core/: CMakeLists.txt  base_observer.cpp  config.cpp  error.cpp  pardiso.cpp  utilities.cpp
src/mymfem/: CMakeLists.txt  local_mesh_refinement.cpp  mybilinearform.cpp  mymixedbf.cpp  utilities.cpp
src/waveO1/: CMakeLists.txt  assembly.cpp  coefficients.cpp  dg_error.cpp  dgp_error.cpp  discretisation.cpp  energy.cpp  observer.cpp  solver.cpp  sparse_dg_error.cpp  sparse_dgp_error.cpp  sparse_grids_handler.cpp  test_cases.cpp  test_cases_factory.cpp  utilities.cpp
src/waveO2/: CMakeLists.txt  assembly.cpp  coefficients.cpp  discretisation.cpp  observer.cpp  test_cases.cpp  test_cases_factory.cpp  utilities.cpp
tests/: CMakeLists.txt  test_mesh_point_locator.cpp  test_pardiso.cpp  unit_tests.cpp
